--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
   "name": "cookie-consent-server",
   "version": "1.0.0",
-  "description": "Backend server for handling cookie consent data",
-  "main": "index.js",
-  "type": "module",
-    "scripts": {
-    "start": "node index.js",
+  "scripts": {
     "dev": "vercel dev"
   },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
-  }
+  "dependencies": {}
 }
